# rascl_wp3

./: .gitignore  Dockerfile  README.md  rosws.sh
src/rascl_description/: CMakeLists.txt  README.md  package.xml
src/rascl_description/config/: controllers.yaml
src/rascl_description/launch/: display.launch.py  ros2_control.launch.py
src/rascl_description/meshes/: base_link.dae  gripper.dae  gripper.stl  lowerarm.stl  upperarm.stl
src/rascl_description/rviz/: urdf.rviz
src/rascl_description/urdf/: dyf_test.urdf  rascl.urdf
src/rascl_hardware_interface/: CMakeLists.txt  README.md  package.xml  rascl_hardware_interface.xml
src/rascl_hardware_interface/include/rascl_hardware_interface/: rascl_hardware_interface.hpp
src/rascl_hardware_interface/src/: rascl_hardware_interface.cpp
src/rascl_hardware_interface/test/: test_generic_system.cpp
src/rascl_wp3_ss26_group16/: README.md  package.xml  setup.cfg  setup.py
src/rascl_wp3_ss26_group16/config/: task1.yaml  task2.yaml
src/rascl_wp3_ss26_group16/docs/: cube_placement.md  task1.md  task2.md
src/rascl_wp3_ss26_group16/launch/: wp3_tsk1.launch.py  wp3_tsk1_sim.launch.py  wp3_tsk2.launch.py  wp3_tsk2_sim.launch.py
src/rascl_wp3_ss26_group16/rascl_wp3_ss26_group16/: wp3_tsk1.py
src/rascl_wp3_ss26_group16/src/rascl_wp3_ss26_group16/: __init__.py  wp3_tsk1.py  wp3_tsk2.py
src/rascl_wp3_ss26_group16/test/: test_minimum_jerk.py  test_task2_kinematics.py
src/rascl_wp3_ss26_group16/trajectories/input/: README.md  cube_1_to_goal.csv  cube_2_to_bottom.csv  cube_2_to_goal.csv  cube_3_to_goal.csv
